Fixed padding for about page on mobile

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -14,7 +14,6 @@
   min-height: 100dvh;
   height: 100dvh;
   gap: 55px;
-  padding-bottom: 60px;
 }
 
 .about-image {
